day4/kustomize-example/overlays/dev/delete-ingress.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dov-bear-ing
  namespace: dovns
